documentation for setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,9 +48,9 @@ services:
             retries: 3
             timeout: 5s
     phpmyadmin:
-        image: "phpmyadmin:latest"
+        image: 'phpmyadmin:latest'
         ports:
-            - 8080:80
+            - '8080:80'
         environment:
             PMA_HOST: mysql
             PMA_PORT: 3306
