--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "mailgun/mailgun-php": "^4.3"
+        "mailgun/mailgun-php": "^4.3",
+        "openai-php/client": "^0.10.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
