Add API keys for DeepL, Stripe, and OpenAI to .env.example

--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,6 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 DEEPL_API_KEY=INSERT-HERE-YOUR-DEEPL-API-KEY
+STRIPE_KEY=INSERT-HERE-YOUR-STRIPE-PUBLIC-KEY
+STRIPE_SECRET=INSERT-HERE-YOUR-STRIPE-SECRET-KEY
+OPENAI_SECRET_KEY=INSERT-HERE-YOUR-OPENAI-KEY
